--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gitweb-revisited-scratch",
+  "name": "threedliams.github.io",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -31,8 +31,9 @@
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^3.1.3",
     "style-loader": "^0.19.1",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.10.0"
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
     "classnames": "^2.2.5",
